/train/exp/weights/best.pt

--- a/Day2/객체인식대회/객체인식대회(YOLO).ipynb
+++ b/Day2/객체인식대회/객체인식대회(YOLO).ipynb
@@ -19,12 +19,12 @@
       ]
     },
     {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "YrBkZZFNf_wb"
-      },
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
       "source": [
-        "####<font color=red>구글 드라이브 업로드 "
+        "!gdown 1Ktwtj2EcRBFUdfhSfeqiYXijgR_uaXYA"
       ]
     },
     {
@@ -125,6 +125,7 @@
       "source": [
         "!git clone https://github.com/ultralytics/yolov5  # clone repo\n",
         "%cd yolov5\n",
+        "%cp ../custom_data.yaml ./data/\n",
         "%pip install -qr requirements.txt  # install dependencies\n",
         "\n",
         "import torch\n",
@@ -142,6 +143,13 @@
       "source": [
         "##<font color=green>**학습 시작**</font>\n"
       ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": []
     },
     {
       "cell_type": "code",
@@ -260,7 +268,8 @@
       "outputs": [],
       "source": [
         "from IPython.display import Image as Display # to display images\n",
-        "Display(filename='runs/train/exp/results.png', width=1080)"
+        "# exp의 경우 실행마다 1씩 추가되어 생성\n",
+        "Display(filename='runs/train/exp/results.png', width=1080) "
       ]
     },
     {
@@ -305,7 +314,7 @@
       "source": [
         "# Evaluation with the validation data\n",
         "# 원하는 이미지의 경로와 파일명을 지정하여 실행\n",
-        "!python detect.py --weights best.pt --img 640 --conf 0.25 --source ../DataSet/images/val/4201.jpg"
+        "!python detect.py --weights ./runs/train/exp/weights/best.pt --img 640 --conf 0.25 --source ../DataSet/images/val/4201.jpg"
       ]
     },
     {
@@ -356,7 +365,7 @@
         }
       ],
       "source": [
-        "!python val.py --weights test/s_best.pt --data custom_data.yaml --img 640 --iou 0.6 --half"
+        "!python val.py --weights ./runs/train/exp/weights/best.pt --data custom_data.yaml --img 640 --iou 0.6 --half"
       ]
     },
     {
