--- a/Day2/객체인식대회/객체인식대회(YOLO).ipynb
+++ b/Day2/객체인식대회/객체인식대회(YOLO).ipynb
@@ -147,13 +147,6 @@
     {
       "cell_type": "code",
       "execution_count": null,
-      "metadata": {},
-      "outputs": [],
-      "source": []
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -236,7 +229,7 @@
       ],
       "source": [
         "# Train YOLOv5s on custom_data for 20 epochs\n",
-        "!python train.py --img 640 --batch 16 --epochs 10 --data custom_data.yaml --weights yolov5x.pt --cache"
+        "!python train.py --img 320 --batch 16 --epochs 2 --data custom_data.yaml --weights yolov5s.pt --cache"
       ]
     },
     {
