--- a/Day2/2_05_CV_Object_Tracking/CV_object_tracking.ipynb
+++ b/Day2/2_05_CV_Object_Tracking/CV_object_tracking.ipynb
@@ -31,7 +31,7 @@
       },
       "outputs": [],
       "source": [
-        "%mkdir/CV_object_tracking\n",
+        "%mkdir /CV_object_tracking\n",
         "%cd /CV_object_tracking"
       ]
     },
@@ -55,7 +55,7 @@
       },
       "outputs": [],
       "source": [
-        "!gdown --id 1KfSuoleDfYbIoFUasiyCWDLGqrfwLaNG --output cv_tracking.zip"
+        "!gdown --id 11HPHQX6sAquQ8NYyjFpGJyHqkL4TWZwV --output cv_tracking.zip"
       ]
     },
     {
@@ -104,7 +104,7 @@
         "import cv2\n",
         "import numpy as np\n",
         "\n",
-        "cap = cv2.VideoCapture(\"./book.mp4\")\n",
+        "cap = cv2.VideoCapture(\"./book.mov\")\n",
         "ret, frame = cap.read()\n",
         "\n",
         "termination = (cv2.TERM_CRITERIA_EPS | cv2.TERM_CRITERIA_COUNT, 10, 1)\n",
