--- a/Day1/1_07_CV_LineDetection/kmu_LineDetection/kmu_lineDetection.ipynb
+++ b/Day1/1_07_CV_LineDetection/kmu_LineDetection/kmu_lineDetection.ipynb
@@ -4,8 +4,7 @@
   "metadata": {
     "colab": {
       "name": "kmu_lineDetection.ipynb",
-      "provenance": [],
-      "collapsed_sections": []
+      "provenance": []
     },
     "kernelspec": {
       "name": "python3",
@@ -23,20 +22,20 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "GA8OjSWPW_Nz",
-        "outputId": "92743878-9891-4521-99a0-00e69ccc295b"
+        "outputId": "ec9d057d-aa75-4339-fedd-1481d4156cf6"
       },
       "source": [
         "from google.colab import drive\n",
         "drive.mount('/content/drive')"
       ],
-      "execution_count": 22,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n"
-          ],
-          "name": "stdout"
+          ]
         }
       ]
     },
@@ -47,19 +46,19 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "XZ1QQ-ZcXAFh",
-        "outputId": "5776a971-4eaa-43b6-ece1-c3dacfb8bb03"
+        "outputId": "811aac62-e58a-44b0-f1e9-4b541b2cd7cb"
       },
       "source": [
         "%cd /content/drive/MyDrive/Autonomous-AI/Day1/1_07_CV_LineDetection/kmu_LineDetection/"
       ],
-      "execution_count": 23,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "/content/drive/MyDrive/Autonomous-AI/Day1/1_07_CV_LineDetection/kmu_LineDetection\n"
-          ],
-          "name": "stdout"
+          ]
         }
       ]
     },
@@ -81,8 +80,8 @@
         "\n",
         "cap = cv2.VideoCapture('/content/drive/MyDrive/Autonomous-AI/Day1/1_07_CV_LineDetection/kmu_LineDetection/kmu_track.avi')\n",
         "\n",
-        "fourcc = cv2.VideoWriter_fourcc(*'DIVX') \n",
-        "out = cv2.VideoWriter('/content/drive/MyDrive/Autonomous-AI/Day1/1_07_CV_LineDetection/kmu_LineDetection/kmutrack_output.avi', fourcc, 20.0, (640, 480))\n",
+        "# fourcc = cv2.VideoWriter_fourcc(*'DIVX')\n",
+        "# out = cv2.VideoWriter('/content/drive/MyDrive/Autonomous-AI/Day1/1_07_CV_LineDetection/kmu_LineDetection/kmutrack_output.avi', fourcc, 20.0, (640, 480))\n",
         "\n",
         "def processImage(inpImage):\n",
         "    inpImage = cv2.cvtColor(inpImage, cv2.COLOR_BGR2GRAY)\n",
@@ -123,7 +122,7 @@
         "    right_middle_base = np.argmax(for_mid_histogram[3 * midpoint // 2:]) + 3 * midpoint // 2\n",
         "\n",
         "    nwindows = 30\n",
-        "    window_height = np.int(binary_warped.shape[0] / nwindows)\n",
+        "    window_height = np.int32(binary_warped.shape[0] / nwindows)\n",
         "    nonzero = binary_warped.nonzero()\n",
         "    nonzeroy = np.array(nonzero[0])\n",
         "    nonzerox = np.array(nonzero[1])\n",
@@ -162,13 +161,13 @@
         "        right_lane_inds.append(good_right_inds)\n",
         "\n",
         "        if len(good_left_inds) > minpix:\n",
-        "            leftx_current = np.int(np.mean(nonzerox[good_left_inds]))\n",
+        "            leftx_current = np.int32(np.mean(nonzerox[good_left_inds]))\n",
         "            left_cnt_window += 1\n",
         "        else:\n",
         "            left_idx = win_y_high\n",
         "\n",
         "        if len(good_right_inds) > minpix:\n",
-        "            rightx_current = np.int(np.mean(nonzerox[good_right_inds]))\n",
+        "            rightx_current = np.int32(np.mean(nonzerox[good_right_inds]))\n",
         "            right_cnt_window += 1\n",
         "        else:\n",
         "            right_idx = win_y_high\n",
@@ -222,8 +221,8 @@
         "    right_line_window2 = np.array([np.flipud(np.transpose(np.vstack([right_fitx + margin, ploty])))])\n",
         "    right_line_pts = np.hstack((right_line_window1, right_line_window2))\n",
         "\n",
-        "    cv2.fillPoly(window_img, np.int_([left_line_pts]), (255, 0, 0))\n",
-        "    cv2.fillPoly(window_img, np.int_([right_line_pts]), (0, 255, 0))\n",
+        "    cv2.fillPoly(window_img, np.int32([left_line_pts]), (255, 0, 0))\n",
+        "    cv2.fillPoly(window_img, np.int32([right_line_pts]), (0, 255, 0))\n",
         "\n",
         "    result = cv2.addWeighted(out_img, 1, window_img, 0.3, 0)\n",
         "\n",
@@ -254,7 +253,7 @@
         "    mean_x = np.mean((left_fitx, right_fitx), axis=0)\n",
         "    pts_mean = np.array([np.flipud(np.transpose(np.vstack([mean_x, ploty])))])\n",
         "\n",
-        "    cv2.fillPoly(color_warp, np.int_([pts]), (0, 255, 0))\n",
+        "    cv2.fillPoly(color_warp, np.int32([pts]), (0, 255, 0))\n",
         "\n",
         "    newwarp = cv2.warpPerspective(color_warp, Minv, (original_image.shape[1], original_image.shape[0]))\n",
         "    result = cv2.addWeighted(original_image, 1, newwarp, 0.3, 0)\n",
@@ -262,6 +261,9 @@
         "    return pts_mean, result\n",
         "\n",
         "if __name__ == '__main__':\n",
+        "    first_frame = True\n",
+        "    out = None\n",
+        "\n",
         "    while (cap.isOpened()):\n",
         "        ret, frame = cap.read()\n",
         "        if ret:\n",
@@ -271,21 +273,39 @@
         "                ploty, lfit, rfit, draw_info = slide_window_search(birdView)\n",
         "                meanPts, result = draw_lane_lines(frame, birdView, minverse, draw_info)\n",
         "\n",
-        "            except:\n",
-        "                continue\n",
+        "                # 첫 프레임에서만 VideoWriter 생성\n",
+        "                if first_frame:\n",
+        "                    h, w = result.shape[:2]\n",
         "\n",
-        "            out.write(result)\n",
+        "                    # 흑백이면 컬러로 변환 (VideoWriter는 3채널만 저장 가능)\n",
+        "                    if len(result.shape) == 2 or result.shape[2] == 1:\n",
+        "                        result = cv2.cvtColor(result, cv2.COLOR_GRAY2BGR)\n",
+        "\n",
+        "                    fourcc = cv2.VideoWriter_fourcc(*'DIVX')\n",
+        "                    out = cv2.VideoWriter(\n",
+        "                        '/content/drive/MyDrive/Autonomous-AI/Day1/1_07_CV_LineDetection/kmu_LineDetection/kmutrack_output.avi',\n",
+        "                        fourcc, 20.0, (w, h))\n",
+        "                    first_frame = False\n",
+        "\n",
+        "                # 항상 컬러로 저장\n",
+        "                if len(result.shape) == 2 or result.shape[2] == 1:\n",
+        "                    result = cv2.cvtColor(result, cv2.COLOR_GRAY2BGR)\n",
+        "\n",
+        "                out.write(result)\n",
+        "\n",
+        "            except Exception as e:\n",
+        "                print(\"예외 발생:\", e)\n",
+        "                continue\n",
         "\n",
         "            if cv2.waitKey(1) & 0xFF == ord('q'):\n",
         "                break\n",
         "        else:\n",
         "            break\n",
-        "\n",
         "    cap.release()\n",
         "    out.release()\n",
         "    cv2.destroyAllWindows()"
       ],
-      "execution_count": null,
+      "execution_count": 30,
       "outputs": []
     },
     {
@@ -296,17 +316,20 @@
           "base_uri": "https://localhost:8080/",
           "height": 17
         },
-        "outputId": "f1edbd2d-8c29-4c8d-bf66-e14ea718a713"
+        "outputId": "b7efcca5-b386-48d8-9bda-9082addacf30"
       },
       "source": [
         "from google.colab import files\n",
         "files.download('/content/drive/MyDrive/Autonomous-AI/Day1/1_07_CV_LineDetection/kmu_LineDetection/kmutrack_output.avi')"
       ],
-      "execution_count": null,
+      "execution_count": 31,
       "outputs": [
         {
           "output_type": "display_data",
           "data": {
+            "text/plain": [
+              "<IPython.core.display.Javascript object>"
+            ],
             "application/javascript": [
               "\n",
               "    async function download(id, filename, size) {\n",
@@ -349,28 +372,21 @@
               "      div.remove();\n",
               "    }\n",
               "  "
-            ],
-            "text/plain": [
-              "<IPython.core.display.Javascript object>"
             ]
           },
-          "metadata": {
-            "tags": []
-          }
+          "metadata": {}
         },
         {
           "output_type": "display_data",
           "data": {
-            "application/javascript": [
-              "download(\"download_61dab087-064a-4fcf-8630-88db753d80db\", \"kmutrack_output.avi\", 62954874)"
-            ],
             "text/plain": [
               "<IPython.core.display.Javascript object>"
+            ],
+            "application/javascript": [
+              "download(\"download_7a356ccc-3f0b-4886-96c5-fb8c644d3e0a\", \"kmutrack_output.avi\", 62954874)"
             ]
           },
-          "metadata": {
-            "tags": []
-          }
+          "metadata": {}
         }
       ]
     }
