--- a/Day1/1_07_CV_LineDetection/CVline.ipynb
+++ b/Day1/1_07_CV_LineDetection/CVline.ipynb
@@ -1,1 +1,191 @@
-{"cells":[{"cell_type":"code","execution_count":null,"metadata":{"id":"LaDKCiDL5TbZ"},"outputs":[],"source":["!git clone https://github.com/SESL-KMU/Autonomous-AI.git"]},{"cell_type":"code","execution_count":null,"metadata":{"id":"M8Bo6I965UD_"},"outputs":[],"source":["%cd Autonomous-AI/Day1/1_07_CV_LineDetection/line_example/"]},{"cell_type":"code","execution_count":null,"metadata":{"id":"VdVT22nr7Jon"},"outputs":[],"source":["%ls"]},{"cell_type":"code","execution_count":null,"metadata":{"id":"mdyLbCiH8Oag"},"outputs":[],"source":["%run 1_whiteline.py"]},{"cell_type":"code","execution_count":null,"metadata":{"id":"1h_jAKtP8WUP"},"outputs":[],"source":["%run 2_RoI.py"]},{"cell_type":"code","execution_count":null,"metadata":{"id":"yFf5bQbs9zxH"},"outputs":[],"source":["%run 3_binarization.py"]},{"cell_type":"code","execution_count":null,"metadata":{"id":"jvHSyfU093xH"},"outputs":[],"source":["%run 4_blur_Edge.py"]},{"cell_type":"code","execution_count":null,"metadata":{"id":"3u8ukDPJ-XnQ"},"outputs":[],"source":["%run 5_hough.py"]},{"cell_type":"code","execution_count":null,"metadata":{"id":"9zccQnRF-aqW"},"outputs":[],"source":["%run 6_remove_line.py"]},{"cell_type":"code","execution_count":null,"metadata":{"id":"Y4_PmmIO-cqu"},"outputs":[],"source":["%run 7_best_line.py"]},{"cell_type":"code","execution_count":null,"metadata":{"id":"XoKKTh9X-fiX"},"outputs":[],"source":["%cd .."]},{"cell_type":"code","execution_count":null,"metadata":{"id":"ta3DhziE-sQB"},"outputs":[],"source":["%ls"]},{"cell_type":"code","execution_count":null,"metadata":{"id":"3D-w2bWJ-u5o"},"outputs":[],"source":["%run CVlineDetection.py"]},{"cell_type":"code","execution_count":null,"metadata":{"id":"pMMVfZRz-9wf"},"outputs":[],"source":["%run CVlineDetection_ans.py"]}],"metadata":{"accelerator":"GPU","colab":{"collapsed_sections":[],"name":"CVline.ipynb","provenance":[]},"kernelspec":{"display_name":"Python 3","name":"python3"}},"nbformat":4,"nbformat_minor":0}
+{
+ "cells": [
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from google.colab import drive\n",
+    "drive.mount('/content/drive')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%cd /content/drive/MyDrive/"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "id": "LaDKCiDL5TbZ"
+   },
+   "outputs": [],
+   "source": [
+    "!git clone https://github.com/SESL-KMU/Autonomous-AI.git"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "id": "M8Bo6I965UD_"
+   },
+   "outputs": [],
+   "source": [
+    "%cd Autonomous-AI/Day1/1_07_CV_LineDetection/line_example/"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "id": "VdVT22nr7Jon"
+   },
+   "outputs": [],
+   "source": [
+    "%ls"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "id": "mdyLbCiH8Oag"
+   },
+   "outputs": [],
+   "source": [
+    "%run 1_whiteline.py"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "id": "1h_jAKtP8WUP"
+   },
+   "outputs": [],
+   "source": [
+    "%run 2_RoI.py"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "id": "yFf5bQbs9zxH"
+   },
+   "outputs": [],
+   "source": [
+    "%run 3_binarization.py"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "id": "jvHSyfU093xH"
+   },
+   "outputs": [],
+   "source": [
+    "%run 4_blur_Edge.py"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "id": "3u8ukDPJ-XnQ"
+   },
+   "outputs": [],
+   "source": [
+    "%run 5_hough.py"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "id": "9zccQnRF-aqW"
+   },
+   "outputs": [],
+   "source": [
+    "%run 6_remove_line.py"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "id": "Y4_PmmIO-cqu"
+   },
+   "outputs": [],
+   "source": [
+    "%run 7_best_line.py"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "id": "XoKKTh9X-fiX"
+   },
+   "outputs": [],
+   "source": [
+    "%cd .."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "id": "ta3DhziE-sQB"
+   },
+   "outputs": [],
+   "source": [
+    "%ls"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "id": "3D-w2bWJ-u5o"
+   },
+   "outputs": [],
+   "source": [
+    "%run CVlineDetection.py"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "id": "pMMVfZRz-9wf"
+   },
+   "outputs": [],
+   "source": [
+    "%run CVlineDetection_ans.py"
+   ]
+  }
+ ],
+ "metadata": {
+  "accelerator": "GPU",
+  "colab": {
+   "collapsed_sections": [],
+   "name": "CVline.ipynb",
+   "provenance": []
+  },
+  "kernelspec": {
+   "display_name": "Python 3",
+   "name": "python3"
+  }
+ },
+ "nbformat": 4,
+ "nbformat_minor": 0
+}
