--- a/Day1/1_08_DL_LineDetection/DLline.ipynb
+++ b/Day1/1_08_DL_LineDetection/DLline.ipynb
@@ -102,6 +102,24 @@
     {
       "cell_type": "code",
       "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "pip install protobuf==3.20.3"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "pip install opencv-python"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "id": "VEQU0VCYsBZw"
       },
@@ -149,7 +167,7 @@
       "provenance": []
     },
     "kernelspec": {
-      "display_name": "avod_env",
+      "display_name": "Python 3",
       "language": "python",
       "name": "python3"
     },
@@ -163,7 +181,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.7.12"
+      "version": "3.7.7"
     }
   },
   "nbformat": 4,
